fix(s3): fixed s3 and postgres discrepancies [PW-99]